fix: Split etsy and regular api groups
